adding cleaned version

--- a/class_project2018_cleaned.ipynb
+++ b/class_project2018_cleaned.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My Binder link: https://hub.mybinder.org/user/stb2145-rces-finalproject-mb7ozrhw/tree"
+    "My Binder link: "
    ]
   },
   {
