updated w binder badge at end

--- a/class_project2018_cleaned.ipynb
+++ b/class_project2018_cleaned.ipynb
@@ -1870,6 +1870,20 @@
     "! wget http://kage.ldeo.columbia.edu/data/ERA-1deg/taux-ERA.nc\n",
     "! wget http://kage.ldeo.columbia.edu/data/ERA-1deg/tauy-ERA.nc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/stb2145/rces-finalproject/master)"
+   ]
   }
  ],
  "metadata": {
