--- a/class_project2018_cleaned.ipynb
+++ b/class_project2018_cleaned.ipynb
@@ -435,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">**Figure 4a).** Seasonal variability of the Ross Gyre: the mean dynamic ocean topography (cm) over the period of 2011-2016, the color scale is purposefully saturated to highlight the Ross Gyre. There is a dip in the cyclonic gyre."
+    ">**Figure 4a).** The mean dynamic ocean topography (cm) of the Ross Gyre over the period of 2011-2016, the color scale is purposefully saturated to highlight the Gyre. There is a dip in the cyclonic gyre."
    ]
   },
   {
@@ -494,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">**Figure 5a).** Seasonal variability of the Weddell Gyre: the mean dynamic ocean topography (cm) over the period of 2011-2016, the color scale is purposefully saturated to highlight the Weddell Gyre. There is a dip in the cyclonic gyre."
+    ">**Figure 5a).** The mean dynamic ocean topography (cm) of the Weddell Gyre over the period of 2011-2016, the color scale is purposefully saturated to highlight the Weddell Gyre. There is a dip in the cyclonic gyre."
    ]
   },
   {
@@ -1468,8 +1468,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 6b).** The nonseasonal wind curl(10e-5 m/s2) for Weddell Gyre. \n",
-    ">This figure is meant to have nonseasonal Gyre depth superimposed so that we can see role of wind forcing on gyre depth variability. The paper uses the wind curl instead of the windstress curl  as surface atmospheric forcing metric in order to \"isolate the influence of wind variability in a region where the surface drag coefficient is heavily modified by the presence of sea ice in ways that may not be well-represented in reanalyses\"."
+    "**Figure 6b).** The depth variability(cm), and nonseasonal wind curl($10^{-5}$ $m/s^{2}$) for Weddell Gyre. \n",
+    ">The grey is the gyre depth variability and orange is the wind curl variability over the same time period. Seasonal cycle was taken out of both. Thi figure is supposed to express the role of the wind forcing on gyre depth. The paper uses the wind curl instead of the windstress curl as surface atmospheric forcing metric in order to \"isolate the influence of wind variability in a region where the surface drag coefficient is heavily modified by the presence of sea ice in ways that may not be well-represented in reanalyses\". From the correlation coefficient, one can see that the gyre depth variability and wind intensity and direction are highly anti-correlated - meaning when westerlies strengthen (+SAM) gyre depth increase (gyre circulatin intensifies leading to greater Ekamn pumping)."
    ]
   },
   {
@@ -1634,6 +1634,14 @@
     "\n",
     "plt.colorbar(cs, orientation='horizontal', shrink=0.5)\n",
     "plt.title('Figure 7a)\\nAutumn-spring difference (cm)', fontsize=17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 7a).** The sea level difference (cm) between autumn (AMJ) and spring (OND).\n",
+    ">Westward flowing ASC (Antarctic Slope Current) is strongest in aumtumn and weakest in spring. Coastal sea-level is higher in autumn than in spring. At least for the Weddell Gyre this could be due to the fact that strong winter winds are blowing water towards southwest"
    ]
   },
   {
